1.4.3.1. Улучшения Collection API [#288278]