@@ -13,24 +13,24 @@ import static org.hamcrest.Matchers.is;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenMissed2() {
-        List<String> input = Arrays.asList("k2/sk2", "k2/sk2/ssk2");
-        List<String> expect = Arrays.asList("k2", "k2/sk2", "k2/sk2/ssk2");
+        List<String> input = List.of("k2/sk2", "k2/sk2/ssk2");
+        List<String> expect = List.of("k2", "k2/sk2", "k2/sk2/ssk2");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -38,7 +38,7 @@ public class DepartmentsTest {
     @Test
     public void whenSortAsc() {
         List<String> input = Arrays.asList("K1/SK1/SSK2", "K2", "K1/SK1", "K1");
-        List<String> expect = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK2", "K2");
+        List<String> expect = List.of("K1", "K1/SK1", "K1/SK1/SSK2", "K2");
         Departments.sortAsc(input);
         assertThat(input, is(expect));
     }
@@ -46,7 +46,7 @@ public class DepartmentsTest {
     @Test
     public void whenSortDesc() {
         List<String> input = Arrays.asList("K1/SK1/SSK2", "K2", "K1/SK1", "K1", "K2/SK2", "K2/SK1");
-        List<String> expect = Arrays.asList("K2", "K2/SK1", "K2/SK2", "K1", "K1/SK1", "K1/SK1/SSK2");
+        List<String> expect = List.of("K2", "K2/SK1", "K2/SK2", "K1", "K1/SK1", "K1/SK1/SSK2");
         Departments.sortDesc(input);
         assertThat(input, is(expect));
     }
